# mjira

./: Cargo.toml  README.md  config.example.toml  justfile
src/: client.rs  completions.rs  config.rs  main.rs  snow_client.rs  snow_config.rs  snow_main.rs  tempo_client.rs  tempo_main.rs
src/commands/: board.rs  complete.rs  fields.rs  instance.rs  issue.rs  mod.rs  project.rs  query.rs  search.rs
