[package]
name = "mjira"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jira"
path = "src/main.rs"

[[bin]]
name = "tempo"
path = "src/tempo_main.rs"

[[bin]]
name = "snow"
path = "src/snow_main.rs"

[dependencies]
anyhow         = "1"
base64         = "0.22"
chrono         = "0.4"
clap           = { version = "4", features = ["derive", "env"] }
clap_complete  = "4"
chromiumoxide  = { version = "0.7", default-features = false, features = ["tokio-runtime"] }
colored        = "2"
dirs           = "5"
futures        = "0.3"
reqwest        = { version = "0.12", features = ["json"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
tokio          = { version = "1", features = ["full"] }
toml           = "0.8"
